manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privrocket-preprod
  labels:
    name: privrocket-preprod
    app: privrocket
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privrocket-deployment
  namespace: privrocket-preprod
  labels:
    app: privrocket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privrocket-app
  template:
    metadata:
      labels:
        app: privrocket-app
    spec:
      containers:
      - name: privrocket-app 
        image: th0m8s/priv-rocket-ecommerce-main:prod
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 200m  
---
apiVersion: v1
kind: Service
metadata:
  name: privrocket-deployment
  labels:
    app: privrocket-svc
spec:
  type: LoadBalancer
  selector:
    app: privrocket-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-privrocketapp
  # namespace: privrocket-preprod
spec:
  defaultBackend:
    service:
      name: privrocket-service
      port:
        number: 7777
