stripe-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stripe-flask-app
  labels:
    app: stripe-flask-app
spec:
  selector:
    matchLabels:
      app: stripe-flask-app
  template:
    metadata:
      labels:
        app: stripe-flask-app
    spec:
      containers:
      - name: stripe-flask-app 
        image: th0m8s/stripe-app:prod
        ports:
          - containerPort: 4242
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 200m  
---
apiVersion: v1
kind: Service
metadata:
  name: stripe-flask-service
spec:
  type: NodePort
  selector:
    app: stripe-flask-app
  ports:
    - port: 4242
      protocol: TCP
      targetPort: 4242
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stripe-checkout-ingress
spec:
  defaultBackend:
    service:
      name: stripe-flask-service
      port:
        number: 7777
